--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="author" content="I’m Amal, a Passionate UI/UX Designer & Web Designer." />
-          <meta property="og:title" content="Your Name - Portfolio" />
+          <meta property="og:title" content="Amal - Portfolio" />
         <meta property="og:description" content="Explore the creative world of Amal. From web design to digital experiences, this portfolio showcases my journey in shaping digital landscapes." />
         <meta property="og:url" content="https://amaluix.github.io/portfolio/" />
         <meta property="og:image" content="https://amaluix.github.io/portfolio/assets/img/og-image.jpg" />
@@ -44,7 +44,7 @@
                     <span id="ham-trigger-wrap">
                         <span class="ham-trigger">
                             <div class="btn-container button outlined">
-                                <a href="blob:https://github.com/23434e71-8a68-49e6-973b-26888adf9e1a" title="Coffee Mug"  target="_self">My Resume</a>
+                                <a href="assets/Amal-UIUX-Web-Designer-3yr-exp.pdf" title="Resume"  target="_self">My Resume</a>
                             </div>                          
                         </span>                            
                     </span>
@@ -65,7 +65,7 @@
                                             <div class="col-md-12 offset-lg-2 col-lg-8 ">
                                                 <div class="heading-block text-center">
                                                     <h1 class="block-size-2">
-                                                        I’m <strong>Amal,</strong> a Passionate <strong>UI/UX Designer</strong> &amp; <strong>Web Designer.</strong>	
+                                                        I’m <strong>Amal,</strong> a Passionate <strong>UI/UX Designer</strong> &amp; <strong>Web Developer.</strong>	
                                                     </h1>
                                                 </div>
 
@@ -237,7 +237,7 @@
                                                             <a class="cbp-caption" href="portfolio-kelvin.html">
                                                                 <div class="cbp-caption">		                                                                    
                                                                     <div class="cbp-caption-defaultWrap">							
-                                                                        <img src="/assets/img/kelvin/thumb.webp" class="portfolio-thumbnail" alt="Kelvin Controls" >
+                                                                        <img src="assets/img/kelvin/thumb.webp" class="portfolio-thumbnail" alt="Kelvin Controls" >
                                                                     </div>
 
                                                                     <div class="cbp-caption-activeWrap">
@@ -259,7 +259,7 @@
                                                             <a class="cbp-caption" href="portfolio-peaks.html">
                                                                 <div class="cbp-caption">		                                                                    
                                                                     <div class="cbp-caption-defaultWrap">							
-                                                                        <img src="/assets/img/peaks/thumb.webp" class="portfolio-thumbnail" alt="Peaks" >
+                                                                        <img src="assets/img/peaks/thumb.webp" class="portfolio-thumbnail" alt="Peaks" >
                                                                     </div>
 
                                                                     <div class="cbp-caption-activeWrap">
@@ -281,7 +281,7 @@
                                                             <a class="cbp-caption" href="portfolio-winkle.html">
                                                                 <div class="cbp-caption">		                                                                    
                                                                     <div class="cbp-caption-defaultWrap">							
-                                                                        <img src="/assets/img/winkle/thumb.webp" class="portfolio-thumbnail" alt="Jar" >
+                                                                        <img src="assets/img/winkle/thumb.webp" class="portfolio-thumbnail" alt="Jar" >
                                                                     </div>
 
                                                                     <div class="cbp-caption-activeWrap">
