--- a/portfolio-expertyo.html
+++ b/portfolio-expertyo.html
@@ -50,7 +50,7 @@
                 <span id="ham-trigger-wrap">
                     <span class="ham-trigger">
                         <div class="btn-container button outlined">
-                            <a href="#" title="Coffee Mug" target="_self">My Resume</a>
+                            <a href="assets/Amal-UIUX-Web-Designer-3yr-exp.pdf" title="Resume"  target="_self">My Resume</a>
                         </div>
                     </span>
                 </span>
