--- a/portfolio-uos.html
+++ b/portfolio-uos.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
     
-<!-- Mirrored from kraft.caliberthemes.com/template/minimal-portfolio/portfolio-single-before-after.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 18 Aug 2023 09:06:36 GMT -->
 <head>
         <!-- Document Title -->      
-        <title>Kraft | Minimal Portfolio HTML Template</title>
+        <title>UI/UX Designer Portfolio | Web Designer | Frontend Designer</title>
 
         <!-- Metas -->      
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="author" content="CaliberThemes" />
+        <meta name="author" content="I’m Amal, a Passionate UI/UX Designer & Web Designer." />
+        <meta property="og:title" content="Your Name - Portfolio" />
+      <meta property="og:description" content="Explore the creative world of Amal. From web design to digital experiences, this portfolio showcases my journey in shaping digital landscapes." />
+      <meta property="og:url" content="https://amaluix.github.io/portfolio/" />
+      <meta property="og:image" content="https://amaluix.github.io/portfolio/assets/img/og-image.jpg" />
+      <meta property="og:type" content="website" />
+      <meta property="og:site_name" content="Amal Portfolio" />
 
         <!-- Favicon -->      
         <link rel="icon" type="image/png" href="assets/images/favicon.png" />
@@ -32,7 +37,7 @@
             <header id="masthead" class="site-header hamburger-side" role="banner">		
                 <div class="container">
                     <div id="site-branding">			
-                        <a class="logo-brand" href="index-basic.html">
+                        <a class="logo-brand" href="index.html">
                             <img class="logo" src="assets/images/logo/logo.png" alt="Logo">					                            
                             <img class="retina-logo" src="assets/images/logo/logo2x.png" alt="Retina Logo">					                            
                         </a>	
@@ -40,7 +45,7 @@
                     <span id="ham-trigger-wrap">
                         <span class="ham-trigger">
                             <div class="btn-container button outlined">
-                              <a href="assets/Amal-UIUX-Web-Designer-3yr-exp.pdf" title="Resume"  target="_self">My Resume</a>
+                              <a href="assets/Amal-UIUX-Web-Designer-3yr-exp.pdf" title="Resume"  target="_blank">My Resume</a>
                             </div>                          
                         </span>                            
                     </span>
