--- a/portfolio-peaks.html
+++ b/portfolio-peaks.html
@@ -36,7 +36,7 @@
             <header id="masthead" class="site-header hamburger-side" role="banner">		
                 <div class="container">
                     <div id="site-branding">			
-                        <a class="logo-brand" href="index-basic.html">
+                        <a class="logo-brand" href="index.html">
                             <img class="logo" src="assets/images/logo/logo.png" alt="Logo">					                            
                             <img class="retina-logo" src="assets/images/logo/logo2x.png" alt="Retina Logo">					                            
                         </a>	
@@ -44,7 +44,7 @@
                     <span id="ham-trigger-wrap">
                         <span class="ham-trigger">
                             <div class="btn-container button outlined">
-                              <a href="assets/Amal-UIUX-Web-Designer-3yr-exp.pdf" title="Resume"  target="_self">My Resume</a>
+                              <a href="assets/Amal-UIUX-Web-Designer-3yr-exp.pdf" title="Resume"  target="_blank">My Resume</a>
                             </div>                          
                         </span>                            
                     </span>
