--- a/portfolio-expertyo.html
+++ b/portfolio-expertyo.html
@@ -108,57 +108,48 @@
 
 
                                     <div class="related-portfolio-post">
-                                        <h3>Related Works</h3>
+                                        <h3>More Works</h3>
 
                                         <div class="portfolio-wrap">
-                                            <div id="portfolio-container-grid" class="cbp" data-layoutmode="grid"
-                                                data-gapvertical="30" data-gaphorizontal="30" data-displaytype="default"
-                                                data-large-desktop="3" data-tablet-landscape="3"
-                                                data-tablet-portrait="3" data-mobile="1">
+                                            <div id="portfolio-container-grid" class="cbp" data-layoutmode="grid" data-gapvertical="30" data-gaphorizontal="30" data-displaytype="default" data-large-desktop="3" data-tablet-landscape="3" data-tablet-portrait="3" data-mobile="1">
 
                                                 <div class="cbp-item  art illustration">
-                                                    <a class="cbp-caption" href="portfolio-single-multiple-media.html">
+                                                    <a class="cbp-caption" href="portfolio-expertyo.html">
                                                         <div class="cbp-caption">
                                                             <div class="cbp-caption-defaultWrap">
-                                                                <img src="assets/images/portfolio/single/pillow-min.jpg"
-                                                                    class="portfolio-thumbnail" alt="Pillow">
+                                                                <img src="assets/img/expertyo/thumb.webp" class="portfolio-thumbnail" alt="Expertyo website" >
                                                             </div>
                                                         </div>
-                                                        <div class="cbp-l-grid-agency-title alignCenter">Cusion Mockup
-                                                        </div>
-                                                        <div class="cbp-l-grid-agency-desc alignCenter">Photoshop</div>
+                                                        <div class="cbp-l-grid-agency-title alignCenter">Expertyo</div>
+                                                            <div class="cbp-l-grid-agency-desc alignCenter">Website</div>
                                                     </a>
                                                 </div>
 
                                                 <div class="cbp-item logo">
-                                                    <a class="cbp-caption" href="portfolio-single-small-videos.html">
+                                                    <a class="cbp-caption" href="portfolio-winkle.html">
                                                         <div class="cbp-caption">
                                                             <div class="cbp-caption-defaultWrap">
-                                                                <img src="assets/images/portfolio/single/business-card-min.jpg"
-                                                                    class="portfolio-thumbnail" alt="Business Card">
+                                                                <img src="assets/img/winkle/thumb.webp" class="portfolio-thumbnail" alt="Winkle Webiste" >
                                                             </div>
                                                         </div>
-                                                        <div class="cbp-l-grid-agency-title alignCenter">Business Card
-                                                        </div>
-                                                        <div class="cbp-l-grid-agency-desc alignCenter">Branding</div>
-                                                    </a>
+                                                        <div class="cbp-l-grid-agency-title alignCenter">Winkle Webiste</div>
+                                                        <div class="cbp-l-grid-agency-desc alignCenter">Website</div>
+                                                    </a>                                                                        
                                                 </div>
 
                                                 <div class="cbp-item branding">
-                                                    <a class="cbp-caption" href="portfolio-single-small-slider.html">
+                                                    <a class="cbp-caption" href="portfolio-uos.html">
                                                         <div class="cbp-caption">
                                                             <div class="cbp-caption-defaultWrap">
-                                                                <img src="assets/images/portfolio/single/headphone-min.jpg"
-                                                                    class="portfolio-thumbnail" alt="Headphone">
+                                                                <img src="assets/img/uos/thumb.webp" class="portfolio-thumbnail" alt="uos" >
                                                             </div>
                                                         </div>
-                                                        <div class="cbp-l-grid-agency-title alignCenter">Pink Headphone
-                                                        </div>
-                                                        <div class="cbp-l-grid-agency-desc alignCenter">Gadget</div>
+                                                        <div class="cbp-l-grid-agency-title alignCenter">UOS Admission Campaign</div>
+                                                        <div class="cbp-l-grid-agency-desc alignCenter">Website</div>
                                                     </a>
-                                                </div>
+                                                </div>                                                                
 
-                                            </div>
+                                            </div>                                                    
                                         </div>
                                     </div>
                                 </div>
