--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
 
 
     </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PE3PY79YEH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PE3PY79YEH');
+</script>
     <body>
         <!-- Page Wrapper -->
         <div id="page" class="site">
