--- a/portfolio-expertyo.html
+++ b/portfolio-expertyo.html
@@ -98,7 +98,7 @@
                                                         </li>
                                                     </ul>
                                                     <div class="btn-container button outlined">
-                                                        <a href="#" title="" target="_self">LAUNCH</a>
+                                                        <a href="https://expertyo.ae/" title="" target="_blank">LAUNCH</a>
                                                     </div>
                                                 </div>
                                             </div>
