--- a/index.html
+++ b/index.html
@@ -80,6 +80,21 @@
                                                     </h1>
                                                 </div>
 
+                                                <a href="tel:+917012287768" class="mx-auto" style="    text-align: center;
+                                                font-size: 18px;
+                                                font-weight: 600;
+                                                color: #151515;
+                                                padding: 10px;
+                                                border: 1px solid #000;
+                                                display: flex;
+                                                justify-content: center;
+                                                max-width: 150px;
+                                                align-items: center;
+                                                gap: 10px;
+                                                margin: 40px;">
+    <i class="fa fa-phone" aria-hidden="true"></i>
+    Lets Talk</a>
+
                                             </div>
                                         </div>     
                                     </div>         
@@ -109,7 +124,120 @@
                                                          data-gaphorizontal="40" data-gapvertical="50" data-displaytype="default" data-large-desktop="3" data-tablet-landscape="3" data-tablet-portrait="2" data-mobile="1" 
                                                          data-defaultfilter="*" >
 
-                                                    
+
+                                                         <div class="cbp-item  web">                                                           
+                                                            <a class="cbp-caption" href="portfolio-nv.html">
+                                                                <div class="cbp-caption">		                                                                    
+                                                                    <div class="cbp-caption-defaultWrap">							
+                                                                        <img src="assets/img/natural-verity/natural-verity-thumb.webp" class="portfolio-thumbnail" alt="pnl" >
+                                                                    </div>
+
+                                                                    <div class="cbp-caption-activeWrap">
+                                                                        <div class="cbp-l-caption-alignCenter">
+                                                                            <div class="cbp-l-caption-body">
+                                                                                <div class="cbp-l-caption-title">
+                                                                                    <img src="assets/images/svg/overlay-arrow.svg" class="icon-arrow" alt="overlay-arrow">
+                                                                                </div>                                                                          
+                                                                            </div>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>  
+                                                                <div class="cbp-l-grid-agency-title alignCenter">Natural Verity Seller</div>
+                                                                <div class="cbp-l-grid-agency-desc alignCenter">Web Application</div>
+                                                            </a>                                                           
+                                                        </div>
+
+
+                                                         <div class="cbp-item  mob">
+                                                            <a class="cbp-caption cbp-lightbox" data-title="Ecommerce-app" href="assets/img/natural-verity/emplyee-tracking.webp" >
+                                                                <div class="cbp-caption">		                                                                    
+                                                                    <div class="cbp-caption-defaultWrap">							
+                                                                        <img src="assets/img/natural-verity/emplyee-tracking.webp" class="portfolio-thumbnail" alt="Employee-app" >
+                                                                    </div>
+
+                                                                    <div class="cbp-caption-activeWrap">
+                                                                        <div class="cbp-l-caption-alignCenter">
+                                                                            <div class="cbp-l-caption-body">
+                                                                                <div class="cbp-l-caption-title">
+                                                                                    <img src="assets/images/svg/overlay-arrow.svg" class="icon-arrow" alt="overlay-arrow">
+                                                                                </div>                                                                          
+                                                                            </div>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>  
+                                                                <div class="cbp-l-grid-agency-title alignCenter">Employee Tracking App</div>
+                                                                <div class="cbp-l-grid-agency-desc alignCenter">App</div>
+                                                            </a>                                                            
+                                                        </div>
+
+
+                                                         <div class="cbp-item  mob">
+                                                            <a class="cbp-caption cbp-lightbox" data-title="Ecommerce-app" href="assets/img/natural-verity/learning-app-ui.webp" >
+                                                                <div class="cbp-caption">		                                                                    
+                                                                    <div class="cbp-caption-defaultWrap">							
+                                                                        <img src="assets/img/natural-verity/learning-app-ui.webp" class="portfolio-thumbnail" alt="LMS-app" >
+                                                                    </div>
+
+                                                                    <div class="cbp-caption-activeWrap">
+                                                                        <div class="cbp-l-caption-alignCenter">
+                                                                            <div class="cbp-l-caption-body">
+                                                                                <div class="cbp-l-caption-title">
+                                                                                    <img src="assets/images/svg/overlay-arrow.svg" class="icon-arrow" alt="overlay-arrow">
+                                                                                </div>                                                                          
+                                                                            </div>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>  
+                                                                <div class="cbp-l-grid-agency-title alignCenter">Learning App</div>
+                                                                <div class="cbp-l-grid-agency-desc alignCenter">App</div>
+                                                            </a>                                                            
+                                                        </div>
+
+                                                         <div class="cbp-item  mob">
+                                                            <a class="cbp-caption cbp-lightbox" data-title="Ecommerce-app" href="assets/img/natural-verity/organic-store-ui.webp" >
+                                                                <div class="cbp-caption">		                                                                    
+                                                                    <div class="cbp-caption-defaultWrap">							
+                                                                        <img src="assets/img/natural-verity/organic-store-ui.webp" class="portfolio-thumbnail" alt="Organic-app" >
+                                                                    </div>
+
+                                                                    <div class="cbp-caption-activeWrap">
+                                                                        <div class="cbp-l-caption-alignCenter">
+                                                                            <div class="cbp-l-caption-body">
+                                                                                <div class="cbp-l-caption-title">
+                                                                                    <img src="assets/images/svg/overlay-arrow.svg" class="icon-arrow" alt="overlay-arrow">
+                                                                                </div>                                                                          
+                                                                            </div>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>  
+                                                                <div class="cbp-l-grid-agency-title alignCenter">Natural Verity</div>
+                                                                <div class="cbp-l-grid-agency-desc alignCenter">App</div>
+                                                            </a>                                                            
+                                                        </div>
+
+
+                                                         <div class="cbp-item  mob">
+                                                            <a class="cbp-caption cbp-lightbox" data-title="Ecommerce-app" href="assets/img/natural-verity/ecommerce-ui.webp" >
+                                                                <div class="cbp-caption">		                                                                    
+                                                                    <div class="cbp-caption-defaultWrap">							
+                                                                        <img src="assets/img/natural-verity/ecommerce-ui.webp" class="portfolio-thumbnail" alt="Ecommerce-app" >
+                                                                    </div>
+
+                                                                    <div class="cbp-caption-activeWrap">
+                                                                        <div class="cbp-l-caption-alignCenter">
+                                                                            <div class="cbp-l-caption-body">
+                                                                                <div class="cbp-l-caption-title">
+                                                                                    <img src="assets/images/svg/overlay-arrow.svg" class="icon-arrow" alt="overlay-arrow">
+                                                                                </div>                                                                          
+                                                                            </div>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>  
+                                                                <div class="cbp-l-grid-agency-title alignCenter">E-commerce App</div>
+                                                                <div class="cbp-l-grid-agency-desc alignCenter">App</div>
+                                                            </a>                                                            
+                                                        </div>
+
                                                          <div class="cbp-item  case">                                                            
                                                             <a class="cbp-caption"  href="portfolio-lms-case-study.html">
                                                                 <div class="cbp-caption">		                                                                    
@@ -222,27 +350,7 @@
                                                             </a>                                                            
                                                         </div>
 
-                                                        <div class="cbp-item  mob">
-                                                            <a class="cbp-caption cbp-lightbox" data-title="lms" href="assets/img/lms/thumb.webp" >
-                                                                <div class="cbp-caption">		                                                                    
-                                                                    <div class="cbp-caption-defaultWrap">							
-                                                                        <img src="assets/img/lms/thumb.webp" class="portfolio-thumbnail" alt="lms" >
-                                                                    </div>
-
-                                                                    <div class="cbp-caption-activeWrap">
-                                                                        <div class="cbp-l-caption-alignCenter">
-                                                                            <div class="cbp-l-caption-body">
-                                                                                <div class="cbp-l-caption-title">
-                                                                                    <img src="assets/images/svg/overlay-arrow.svg" class="icon-arrow" alt="overlay-arrow">
-                                                                                </div>                                                                          
-                                                                            </div>
-                                                                        </div>
-                                                                    </div>
-                                                                </div>  
-                                                                <div class="cbp-l-grid-agency-title alignCenter">LMS App</div>
-                                                                <div class="cbp-l-grid-agency-desc alignCenter">Mobile App</div>
-                                                            </a>                                                            
-                                                        </div>
+                                                        
 
 
                                                         <div class="cbp-item  mob">                                                            
